Fix vertical alignment to middle

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   display: inline-block;
   padding: 2em 1em 0;
   margin: 0;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 img {
